# mazii-foundry

./: README.md  main.py  pyproject.toml
01-python-basics/: index.py  note.md  output.txt  student.json  student.txt
01-python-basics/projects/: student_db.json  task_four.py  task_one.py  task_three.py  task_two.py
01-python-basics/projects/todo_app/: todo.py
01-python-basics/projects/todo_app/data/: tasks.json
02-advanced-python/: index.py  note.md
02-advanced-python/projects/: task_one.py
03-data-analysis/: main.ipynb  numpy_basics.py  requirements.txt  test.ipynb
04-backend-engineering/: fastapi.md  http.md  note.md
04-backend-engineering/task-api/app/: main.py
04-backend-engineering/task-api/app/schemas/: task.py
frontend/learn-electron/: index.html  package-lock.json  package.json
frontend/next-forge/: package.json  pnpm-lock.yaml
frontend/next-forge/app/: page.tsx
frontend/next-forge/app/counter/: page.tsx
frontend/next-forge/app/effect/: page.tsx
frontend/next-forge/app/fetch/: page.tsx
frontend/next-forge/app/refs/: page.tsx
frontend/next-forge/app/theme/: page.tsx
frontend/next-forge/app/zustand/: page.tsx
frontend/next-forge/hooks/: useFetch.ts
frontend/next-forge/libs/: theme.ts
frontend/next-forge/store/: counterStore.ts  themeStore.ts
frontend/react-forge/: README.md  package.json
frontend/react-forge/src/: App.tsx
frontend/react-forge/src/components/: Button.tsx  Counter.tsx  Form.tsx  UserCard.tsx
frontend/task-manager/: package.json  pnpm-lock.yaml
frontend/task-manager/src/: App.tsx
(+6 files in other folders)
